k8s/local/fe/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fe-deployment
  namespace: blog
  labels:
    app: fe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fe
  template:
    metadata:
      labels:
        app: fe
    spec:
      containers:
        - name: fe
          image: roshenrumy/personal-site-fe-dev:latest
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: 64Mi
              cpu: 50m
            limits:
              memory: 128Mi
              cpu: 200m
