k8s/local/fe/httpRoute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: fe-http-route
  namespace: blog
spec:
  parentRefs:
    - name: blog-gateway
  # hostnames:
  #   - "fe.local"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: fe-service
          port: 3000
